# zombie-framework

./: .gitignore  .gitmodules  .travis.yml  API-changes.md  CMakeLists.txt  README.md  appveyor.yml  disttool-web.py
Container/: CMakeLists.txt
Container/include/Container/: ContainerApp.hpp  ContainerBase.hpp  ContainerInterfaces.hpp  ContainerScene.hpp  RenderingHandler.hpp  SceneGraph.hpp  SceneLayerGameUI.hpp
Container/src/Container/: ContainerApp.cpp  ContainerScene.cpp  RenderingHandler.cpp  SceneGraph.cpp  SceneLayer3D.cpp
RenderingKit/: CMakeLists.txt
RenderingKit/assets/RenderingKit/: basic.frag  basic.vert  basicTextured.frag  basicTextured.vert  picking.frag  picking.vert  ui.frag  ui.vert
RenderingKit/dependencies/: README.md  README.txt
RenderingKit/include/RenderingKit/: Model.hpp  RenderingKit.hpp  RenderingKitUtility.hpp  TypeReflection.hpp  WorldGeometry.hpp
RenderingKit/src/RenderingKit/: Camera.cpp  DeferredShadingManager.cpp  FixedPipelineMaterial.cpp  FontFace.cpp  GLStateTracker.cpp  GeomBuffer.cpp  GlobalCache.cpp  Graphics.cpp  Material.cpp  Model.cpp  PixelAtlas.cpp  RenderBuffer.cpp  RenderingKit.cpp  RenderingKitImpl.hpp  RenderingManager.cpp  Shader.cpp  Texture.cpp  TextureAtlas.cpp  VertexCache.cpp  VertexFormat.cpp  WindowManager_SDL.cpp  WorldGeometry.cpp
StudioKit/: CMakeLists.txt
StudioKit/include/StudioKit/: blenderimporter.hpp  mapwriter.hpp  startupscreen.hpp  worldgeom.hpp
StudioKit/src/StudioKit/: blenderimporter.cpp  mapwriter.cpp  startupscreen.cpp  texturecache.cpp  worldgeom.cpp
WorldCraft/: CMakeLists.txt
WorldCraft/assets/: army.bleb  base.bleb  occlusion.bleb  town.bleb
WorldCraft/assets-src/blendermaps/: army.blend  base.blend  occlusion.blend  town.blend
WorldCraft/assets/sandbox/: point.vert
WorldCraft/include/StudioKit/: startupscreen.hpp  texturecache.hpp  worldgeom.hpp
WorldCraft/src/StudioKit/: startupscreen.cpp  texturecache.cpp  worldgeom.cpp
WorldCraft/src/worldcraft2/: compile.cpp  editorview.cpp  editorview.hpp  hostsession.cpp  modelpreview.cpp  node.cpp  node.hpp  session.hpp  world.cpp  world.hpp  worldcraftapp.cpp  worldcraftpro.cpp  worldcraftpro.hpp
examples/Container3DScene/: .gitignore  CMakeLists.txt  dist.json
examples/Container3DScene/src/: main.cpp
examples/ContainerDeferredShading/: CMakeLists.txt  README.md  dist.json
examples/ContainerDeferredShading/assets/: summit.bleb
examples/ContainerDeferredShading/src/: ContainerMapView.hpp  MapSelectionScene.cpp  MapViewScene.cpp  RenderSystem.cpp  RenderSystem.hpp  components.cpp  components.hpp  main.cpp
examples/ContainerHelloWorld/: .gitignore  CMakeLists.txt  dist.json
examples/ContainerHelloWorld/src/: main.cpp
examples/minimal/: CMakeLists.txt  main.cpp
framework/: CMakeLists.txt  buildfontcache.cpp
framework/dependencies/: README.md  README.txt
framework/include/framework/: aspecttype.hpp  base.hpp  broadcasthandler.hpp  component.hpp  componenttype.hpp  engine.hpp  entity.hpp  entity2.hpp  entityworld.hpp  entityworld2.hpp  errorcheck.hpp  event.hpp  filesystem.hpp  framework.hpp  interpolator.hpp  messagequeue.hpp  pixmap.hpp  pointentity.hpp  resource.hpp  resourcemanager2.hpp  scene.hpp  scripting.hpp  shader_preprocessor.hpp  system.hpp  varsystem.hpp  videohandler.hpp
framework/include/gameui/: gameui.hpp  gameui_base.hpp  gameui_defaultskin.hpp  uithemer.hpp
framework/include/zshared/: crc16_ccitt.hpp
framework/include/ztype/: ztype.hpp
framework/src/framework/: allocpool.cpp  asprintf.cpp  broadcasthandler.cpp  datamodel.cpp  engine.cpp  entityhandler.cpp  entityworld.cpp  entityworld2.cpp  filesystem_std.cpp  fsunion.cpp  mediacodechandler.cpp  messagequeue.cpp  modulehandler.cpp  private.hpp  profiler.cpp  resourcemanager.cpp  resourcemanager2.cpp  scene.cpp  shader_preprocessor.cpp  system.cpp  timer.cpp  varsystem.cpp
framework/src/gameui/: button.cpp  checkbox.cpp  combobox.cpp  graphics.cpp  listctrl.cpp  menubar.cpp  panel.cpp  popup.cpp  scrollbar.cpp  slider.cpp  staticimage.cpp  statictext.cpp  tablelayout.cpp  textbox.cpp  treebox.cpp  uicontainer.cpp  uiloader.cpp  widget.cpp
framework/src/zshared/: crc16_ccitt.cpp  mediafile2.cpp
framework/src/ztype/: buildfontcache.cpp  facefile.cpp  facelistfile.cpp  fontcache.cpp  rasterizer.cpp
framework2012/: CMakeLists.txt  makefonts.bat
framework2012/dependencies/: .gitignore  README.md
framework2012/dependencies/superscanf/: superscanf.c  superscanf.h
framework2012/src/: parse_args.h
framework2012/src/contentkit/: splashscene.cpp  splashscene.hpp  texturecache.cpp  texturecache.hpp
framework2012/src/framework/: allocpool.cpp  allocpool.hpp  app.hpp  base.hpp  bitmap.cpp  camera.cpp  collision.cpp  collision.hpp  datafile.cpp  datafile.hpp  entity.cpp  entity.hpp  event.cpp  event.hpp  framework.hpp  graphics.cpp  medialoader.cpp  messagequeue.cpp  messagequeue.hpp  presetfactory.cpp  rendering.hpp  session.cpp  session.hpp  stage.cpp  stage.hpp  startupscreen.cpp  startupscreen.hpp  sys.cpp  timer.cpp  util.cpp  var.cpp
framework2012/src/gameui/: button.cpp  combobox.cpp  gameui.hpp  listbox.cpp  menuitem.cpp  panel.cpp  popup.cpp  scrollbar.cpp  staticimage.cpp  statictext.cpp  tablesizer.cpp  textbox.cpp  treectrl.cpp  uicontainer.cpp  uiresmanager.cpp  widget.cpp  widgetcontainer.cpp  window.cpp
framework2012/src/render_opengl/: batch.cpp  font.cpp  font2.cpp  loader.cpp  material.cpp  mesh.cpp  model.cpp  r.cpp  render.hpp  renderbuffer.cpp  rendering.cpp  rendering.hpp  shader.cpp  texture.cpp  vertexbuffer.cpp  video_sdl.cpp  video_slave.cpp
framework2012/src/zshared/: mediafile.cpp  mediafile.hpp  modelfile.hpp
framework2012/src/ztype/: buildfontcache.cpp  (+5 more)
ntile/: .gitignore  CMakeLists.txt
ntile/assets/: cfg_ntile.txt  cfg_ntile_winnt.txt  ntile.bindings  ntile1.bleb
ntile/assets-src/: font.bat  font.sh  lua.bat  lua.sh  ntileStartup.lua
ntile/dependencies/: .gitignore
tools/mapcompiler/: CMakeLists.txt
zombie/: .gitignore  CMakeLists.txt
zombie/assets/: boot.txt
zombie/src/: winzombie.cpp
(+364 files in other folders)
